force-app/main/default/objects/Fornecedor__c/Fornecedor__c.object-meta.xml
<CustomObject>
    <label>Pedido de Compra</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número do Pedido de Compra</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pedidos de Compra</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>