force-app/main/default/objects/Fornecedor__c/fields/Comprador__c.field-meta.xml
<CustomField>
    <fullName>Comprador__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Comprador</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Fornecedores3</relationshipName>
    <type>Lookup</type>
</CustomField>