force-app/main/default/objects/Fornecedor__c/fields/Comprador_SAP__c.field-meta.xml
<CustomField>
    <fullName>Comprador_SAP__c</fullName>
    <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Comprador (Envio SAP)</label>
    <type>Text</type>
</CustomField>