force-app/main/default/objects/Fornecedor__c/fields/Condicao_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Condicao_de_Pagamento__c</fullName>
    <label>Condições de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>05/30/60/90/120 dias</fullName>
            </value>
            <value>
                <fullName>05/30/60 Dias</fullName>
            </value>
            <value>
                <fullName>05/30 Dias</fullName>
            </value>
            <value>
                <fullName>10 X</fullName>
            </value>
            <value>
                <fullName>15/30/45/60</fullName>
            </value>
            <value>
                <fullName>15/30 Dias</fullName>
            </value>
            <value>
                <fullName>15 Dias</fullName>
            </value>
            <value>
                <fullName>20% de entrada + 10x</fullName>
            </value>
            <value>
                <fullName>21 dias</fullName>
            </value>
            <value>
                <fullName>30/60/90/120/150/180 Dias</fullName>
            </value>
            <value>
                <fullName>30/60/90/120/150 Dias</fullName>
            </value>
            <value>
                <fullName>30/60/90/120 Dias</fullName>
            </value>
            <value>
                <fullName>30/60/90 Dias</fullName>
            </value>
            <value>
                <fullName>30/60 Dias</fullName>
            </value>
            <value>
                <fullName>30% de entrada + 6x</fullName>
            </value>
            <value>
                <fullName>30 Dias</fullName>
            </value>
            <value>
                <fullName>40% de entrada + 10x</fullName>
            </value>
            <value>
                <fullName>50% de entrada + 10x</fullName>
            </value>
            <value>
                <fullName>60/90 Dias</fullName>
            </value>
            <value>
                <fullName>60 Dias</fullName>
            </value>
            <value>
                <fullName>7 dias</fullName>
            </value>
            <value>
                <fullName>90 Dias</fullName>
            </value>
            <value>
                <fullName>À vista - 7 Dias</fullName>
            </value>
            <value>
                <fullName>À Vista - Antecipado</fullName>
            </value>
            <value>
                <fullName>À vista - Paga e Retira</fullName>
            </value>
            <value>
                <fullName>Condição Especial</fullName>
            </value>
            <value>
                <fullName>Condição Especial - Aprovado pela Diretoria</fullName>
            </value>
            <value>
                <fullName>Entrada + 30/60/90/120 Dias</fullName>
            </value>
            <value>
                <fullName>Entrada + 30/60/90 Dias</fullName>
            </value>
            <value>
                <fullName>Entrada + 30 Dias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>