force-app/main/default/objects/Fornecedor__c/fields/Contrato_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_compra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato de compra</label>
    <referenceTo>Contrato_de_compra__c</referenceTo>
    <relationshipLabel>Pedidos de Compra</relationshipLabel>
    <relationshipName>Pedidos_de_Compra</relationshipName>
    <type>Lookup</type>
</CustomField>