force-app/main/default/objects/Fornecedor__c/fields/Data_da_Compra__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Compra__c</fullName>
    <label>Data da Compra</label>
    <type>Date</type>
</CustomField>