force-app/main/default/objects/Fornecedor__c/fields/data_de_aprovacao_da_requisicao__c.field-meta.xml
<CustomField>
    <fullName>data_de_aprovacao_da_requisicao__c</fullName>
    <formula>Pedido_de_compra__r.Requisicao_Interna__r.data_aprovacao_req__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>data de aprovação da requisição</label>
    <type>Date</type>
</CustomField>