force-app/main/default/objects/Fornecedor__c/fields/Data_de_criacao_da_requisicao_interna__c.field-meta.xml
<CustomField>
    <fullName>Data_de_criacao_da_requisicao_interna__c</fullName>
    <formula>Pedido_de_compra__r.Requisicao_Interna__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de criação da requisição interna</label>
    <type>Date</type>
</CustomField>