force-app/main/default/objects/Fornecedor__c/fields/Descricao_do_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Descricao_do_pagamento__c</fullName>
    <label>Descrição do pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>