force-app/main/default/objects/Fornecedor__c/fields/Forma_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pagamento__c</fullName>
    <label>Forma de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dinheiro</fullName>
            </value>
            <value>
                <fullName>Depósito Bancário</fullName>
            </value>
            <value>
                <fullName>Depósito Antecipado</fullName>
            </value>
            <value>
                <fullName>Boleto</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cartão de Crédito</fullName>
            </value>
            <value>
                <fullName>Cartão de Débito</fullName>
            </value>
            <value>
                <fullName>Permuta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>