force-app/main/default/objects/Fornecedor__c/fields/Itens_cancelados__c.field-meta.xml
<CustomField>
    <fullName>Itens_cancelados__c</fullName>
    <label>Itens cancelados</label>
    <summaryFilterItems>
        <field>Item_de_fornecedor__c.Status__c</field>
        <operation>equals</operation>
        <value>Cancelado</value>
    </summaryFilterItems>
    <summaryForeignKey>Item_de_fornecedor__c.Fornecedor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>