force-app/main/default/objects/Fornecedor__c/fields/Itens_totais__c.field-meta.xml
<CustomField>
    <fullName>Itens_totais__c</fullName>
    <label>Itens totais</label>
    <summaryForeignKey>Item_de_fornecedor__c.Fornecedor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>