force-app/main/default/objects/Fornecedor__c/fields/Itens_total__c.field-meta.xml
<CustomField>
    <fullName>Itens_total__c</fullName>
    <label>Itens total</label>
    <summarizedField>Item_de_fornecedor__c.Quantidade__c</summarizedField>
    <summaryFilterItems>
        <field>Item_de_fornecedor__c.Comprar__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Item_de_fornecedor__c.Fornecedor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>