force-app/main/default/objects/Fornecedor__c/fields/Justificativa_da_decisao_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Justificativa_da_decisao_de_compra__c</fullName>
    <label>Justificativa da decisão de compra</label>
    <type>TextArea</type>
</CustomField>