force-app/main/default/objects/Fornecedor__c/fields/Log_de_integra_o__c.field-meta.xml
<CustomField>
    <fullName>Log_de_integra_o__c</fullName>
    <label>Log de integração</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>