force-app/main/default/objects/Fornecedor__c/fields/Moeda__c.field-meta.xml
<CustomField>
    <fullName>Moeda__c</fullName>
    <formula>TEXT(Pedido_de_compra__r.CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moeda</label>
    <type>Text</type>
</CustomField>