force-app/main/default/objects/Fornecedor__c/fields/Moeda_do_Frete__c.field-meta.xml
<CustomField>
    <fullName>Moeda_do_Frete__c</fullName>
    <label>Moeda do Frete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRL</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>