force-app/main/default/objects/Fornecedor__c/fields/N_DA_Nfe__c.field-meta.xml
<CustomField>
    <fullName>N_DA_Nfe__c</fullName>
    <label>Nº DA Nfe</label>
    <length>225</length>
    <type>Text</type>
</CustomField>