force-app/main/default/objects/Fornecedor__c/fields/No_prazo_2__c.field-meta.xml
<CustomField>
    <fullName>No_prazo_2__c</fullName>
    <formula>IF(No_prazo__c == &apos;Sim&apos;, 1, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No prazo 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>