force-app/main/default/objects/Fornecedor__c/fields/Notas_lancadas__c.field-meta.xml
<CustomField>
    <fullName>Notas_lancadas__c</fullName>
    <label>Notas lançadas</label>
    <summaryForeignKey>Nota_fiscal_de_pedido_de_compra__c.Pedido_de_Compra__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>