force-app/main/default/objects/Fornecedor__c/fields/Notas_no_prazo__c.field-meta.xml
<CustomField>
    <fullName>Notas_no_prazo__c</fullName>
    <label>Notas no prazo</label>
    <summaryFilterItems>
        <field>Nota_fiscal_de_pedido_de_compra__c.Escriturada_no_prazo__c</field>
        <operation>equals</operation>
        <value>Sim</value>
    </summaryFilterItems>
    <summaryForeignKey>Nota_fiscal_de_pedido_de_compra__c.Pedido_de_Compra__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>