force-app/main/default/objects/Fornecedor__c/fields/Nova_Data_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Nova_Data_de_Entrega__c</fullName>
    <inlineHelpText>Use esse campo em caso de mudança na data de entrega dada pelo fornecedor do pedido de compra</inlineHelpText>
    <label>Nova Data de Entrega</label>
    <type>Date</type>
</CustomField>