force-app/main/default/objects/Fornecedor__c/fields/Observacoes_Compra__c.field-meta.xml
<CustomField>
    <fullName>Observacoes_Compra__c</fullName>
    <inlineHelpText>Parágrafo adicional para PDF de Pedido de Compra.</inlineHelpText>
    <label>Observações Compra</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>