force-app/main/default/objects/Fornecedor__c/fields/Observacoes_Cotacao__c.field-meta.xml
<CustomField>
    <fullName>Observacoes_Cotacao__c</fullName>
    <inlineHelpText>Parágrafo adicional para PDF de Solicitação de Cotação.</inlineHelpText>
    <label>Observações Cotação</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>