force-app/main/default/objects/Fornecedor__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <formula>TEXT(Pedido_de_compra__r.Origem__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origem</label>
    <type>Text</type>
</CustomField>