force-app/main/default/objects/Fornecedor__c/fields/Pagamento_antecipado__c.field-meta.xml
<CustomField>
    <fullName>Pagamento_antecipado__c</fullName>
    <label>Pagamento antecipado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>