force-app/main/default/objects/Fornecedor__c/fields/Pedido_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Pedido_de_compra__c</fullName>
    <label>Cotação</label>
    <referenceTo>Pedido_de_compra__c</referenceTo>
    <relationshipName>Fornecedores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>