force-app/main/default/objects/Fornecedor__c/fields/per_odo_aberto__c.field-meta.xml
<CustomField>
    <fullName>per_odo_aberto__c</fullName>
    <formula>TODAY() - Prazo_de_recebimento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>período aberto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>