force-app/main/default/objects/Fornecedor__c/fields/Prazo_de_recebimento__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_recebimento__c</fullName>
    <inlineHelpText>Previsão de entrega definida com base na data de aprovação da cotação + quantidade de dias de entrega.</inlineHelpText>
    <label>Previsão de entrega</label>
    <type>Date</type>
</CustomField>