force-app/main/default/objects/Fornecedor__c/fields/Prazo_em_dias__c.field-meta.xml
<CustomField>
    <fullName>Prazo_em_dias__c</fullName>
    <label>Prazo (em dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>