force-app/main/default/objects/Fornecedor__c/fields/Prioridade_da_requisicao__c.field-meta.xml
<CustomField>
    <fullName>Prioridade_da_requisicao__c</fullName>
    <formula>TEXT(Pedido_de_compra__r.Requisicao_Interna__r.Prioridade__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prioridade da requisição</label>
    <type>Text</type>
</CustomField>