force-app/main/default/objects/Fornecedor__c/fields/Qhatidade_de_itens_da_REQ__c.field-meta.xml
<CustomField>
    <fullName>Qhatidade_de_itens_da_REQ__c</fullName>
    <formula>Pedido_de_compra__r.Requisicao_Interna__r.Total_de_Itens__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qhatidade de itens da REQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>