force-app/main/default/objects/Fornecedor__c/fields/Quantidade_da_re__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_da_re__c</fullName>
    <formula>Pedido_de_compra__r.Requisicao_Interna__r.Total_de_Itens__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade da re</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>