force-app/main/default/objects/Fornecedor__c/fields/Requisitante__c.field-meta.xml
<CustomField>
    <fullName>Requisitante__c</fullName>
    <formula>Pedido_de_compra__r.Requisicao_Interna__r.CreatedBy.FirstName +&quot; &quot;+Pedido_de_compra__r.Requisicao_Interna__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requisitante</label>
    <type>Text</type>
</CustomField>