force-app/main/default/objects/Fornecedor__c/fields/Saving_ultima_compra__c.field-meta.xml
<CustomField>
    <fullName>Saving_ultima_compra__c</fullName>
    <label>Saving última compra</label>
    <summarizedField>Item_de_fornecedor__c.Saving_ultima_compra__c</summarizedField>
    <summaryForeignKey>Item_de_fornecedor__c.Fornecedor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>