force-app/main/default/objects/Fornecedor__c/fields/Situacao2__c.field-meta.xml
<CustomField>
    <fullName>Situacao2__c</fullName>
    <formula>IF(
AND(
Prazo_de_recebimento__c &lt; TODAY(),
TEXT(Status_do_PC__c) != &apos;Finalizado Total&apos;
), &apos;Entrega em atraso&apos;,
IF(
AND(
Prazo_de_recebimento__c &gt;= TODAY(),
TEXT(Status_do_PC__c) != &apos;Finalizado Total&apos;
),
&apos;No prazo&apos;,
IF(
TEXT(Status_do_PC__c) == &apos;Finalizado Total&apos;,
&apos;Finalizado&apos;, &apos;&apos;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Situação*</label>
    <type>Text</type>
</CustomField>