force-app/main/default/objects/Fornecedor__c/fields/Situacao__c.field-meta.xml
<CustomField>
    <fullName>Situacao__c</fullName>
    <formula>IF(
AND(
Prazo_de_recebimento__c &lt; TODAY(),
TEXT(Status_do_PC__c) != &apos;Finalizado Total&apos;,
TEXT(Status_do_PC__c) != &apos;Cancelado&apos;
), IMAGE(&quot;https://hospcom.file.force.com/servlet/servlet.ImageServer?id=0156e00000CJIjv&amp;oid=00Di0000000JVhH&amp;lastMod=1693419750000&quot;,&quot;&quot; , 90, 220),
IF(
AND(
Prazo_de_recebimento__c &gt;= TODAY(),
TEXT(Status_do_PC__c) != &apos;Finalizado Total&apos;,
TEXT(Status_do_PC__c) != &apos;Cancelado&apos;
),
IMAGE(&quot;https://hospcom.file.force.com/servlet/servlet.ImageServer?id=0156e00000CJIjq&amp;oid=00Di0000000JVhH&amp;lastMod=1693420332000&quot;,&quot;&quot; , 90, 220),
IF(
AND(
TEXT(Status_do_PC__c) == &apos;Finalizado Total&apos;,
Prazo_de_recebimento__c &gt;=  Ultimo_recebimento__c 
),
IMAGE(&quot;https://hospcom.file.force.com/servlet/servlet.ImageServer?id=0156e00000CJIk5&amp;oid=00Di0000000JVhH&amp;lastMod=1693420180000&quot;,&quot;&quot; , 90, 220), 
IF(
AND(
TEXT(Status_do_PC__c) == &apos;Finalizado Total&apos;,
Prazo_de_recebimento__c &lt;=  Ultimo_recebimento__c 
),
IMAGE(&quot;https://hospcom.file.force.com/servlet/servlet.ImageServer?id=0156e00000CJIk0&amp;oid=00Di0000000JVhH&amp;lastMod=1693420146000&quot;,&quot;&quot; , 90, 220), 
&apos;&apos;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Situação</label>
    <type>Text</type>
</CustomField>