force-app/main/default/objects/Fornecedor__c/fields/Status_da_cota_o__c.field-meta.xml
<CustomField>
    <fullName>Status_da_cota_o__c</fullName>
    <formula>TEXT(Pedido_de_compra__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status da cotação</label>
    <type>Text</type>
</CustomField>