force-app/main/default/objects/Fornecedor__c/fields/Status_do_PC__c.field-meta.xml
<CustomField>
    <fullName>Status_do_PC__c</fullName>
    <label>Status do PC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rascunho</fullName>
                <default>true</default>
                <label>Rascunho</label>
            </value>
            <value>
                <fullName>Em cotação</fullName>
            </value>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Finalizado parcial</fullName>
            </value>
            <value>
                <fullName>Finalizado total</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>