force-app/main/default/objects/Fornecedor__c/fields/Status_do_prazo__c.field-meta.xml
<CustomField>
    <fullName>Status_do_prazo__c</fullName>
    <formula>if(  Data_de_prazo_corrido__c = 0, 0, 
if( Tipo__c == &apos;Compra para consumo&apos;, if( Data_de_prazo_corrido__c &lt;=	10 &amp;&amp; Data_de_prazo_corrido__c &gt; 0, 1, 0), 
if( Origem__c == &apos;Nacional&apos;, if(Data_de_prazo_corrido__c &lt;= 30, 1, 0), 
if( Tipo_de__c == &apos;Aéreo&apos;, if(Data_de_prazo_corrido__c &lt;= 90, 1, 0),
if( Tipo_de__c == &apos;Marítimo&apos;, if(Data_de_prazo_corrido__c &lt;= 120, 1, 0),0
)))))</formula>
    <label>Status do prazo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>