force-app/main/default/objects/Fornecedor__c/fields/Tipo_de__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de__c</fullName>
    <formula>TEXT(Pedido_de_compra__r.Tipo_de_entrega__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de entrega</label>
    <type>Text</type>
</CustomField>