force-app/main/default/objects/Fornecedor__c/fields/Transportadora__c.field-meta.xml
<CustomField>
    <fullName>Transportadora__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Transportadora</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Fornecedores2</relationshipName>
    <type>Lookup</type>
</CustomField>