force-app/main/default/objects/Fornecedor__c/fields/Ultimo_recebimento__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_recebimento__c</fullName>
    <label>Último recebimento</label>
    <summarizedField>Item_de_fornecedor__c.Data_do_ultimo_recebimento__c</summarizedField>
    <summaryForeignKey>Item_de_fornecedor__c.Fornecedor__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>