force-app/main/default/objects/Fornecedor__c/fields/Valor_a_ser_antecipado__c.field-meta.xml
<CustomField>
    <fullName>Valor_a_ser_antecipado__c</fullName>
    <label>Valor a ser antecipado</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>