force-app/main/default/objects/Fornecedor__c/fields/Valor_do_frete__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_frete__c</fullName>
    <label>Valor do frete</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>