force-app/main/default/objects/Fornecedor__c/fields/Valor_faturado__c.field-meta.xml
<CustomField>
    <fullName>Valor_faturado__c</fullName>
    <label>Valor faturado</label>
    <summarizedField>Nota_fiscal_de_pedido_de_compra__c.Valor_da_nota__c</summarizedField>
    <summaryForeignKey>Nota_fiscal_de_pedido_de_compra__c.Pedido_de_Compra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>