force-app/main/default/objects/Fornecedor__c/fields/Valor_total_cotado__c.field-meta.xml
<CustomField>
    <fullName>Valor_total_cotado__c</fullName>
    <label>Valor total cotado</label>
    <summarizedField>Item_de_fornecedor__c.Valor_total__c</summarizedField>
    <summaryFilterItems>
        <field>Item_de_fornecedor__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelado</value>
    </summaryFilterItems>
    <summaryForeignKey>Item_de_fornecedor__c.Fornecedor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>