force-app/main/default/objects/Fornecedor__c/fields/Valor_total_do_pedido__c.field-meta.xml
<CustomField>
    <fullName>Valor_total_do_pedido__c</fullName>
    <formula>Valor_total_comprado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor total do pedido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>