force-app/main/default/objects/Fornecedor__c/fields/Valor_Total_Lan_ado__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Lan_ado__c</fullName>
    <label>Valor Total Lançado NF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>