force-app/main/default/objects/Fornecedor__c/recordTypes/Geral.recordType-meta.xml
<RecordType>
    <fullName>Geral</fullName>
    <active>true</active>
    <label>Geral</label>
</RecordType>