force-app/main/default/objects/Fornecedor__c/recordTypes/Importacao.recordType-meta.xml
<RecordType>
    <fullName>Importacao</fullName>
    <active>true</active>
    <label>Importação</label>
</RecordType>