force-app/main/default/objects/Fornecedor__c/recordTypes/Pagamento_de_comiss_o.recordType-meta.xml
<RecordType>
    <fullName>Pagamento_de_comiss_o</fullName>
    <active>true</active>
    <label>Pagamento de comissão</label>
</RecordType>