force-app/main/default/objects/Fornecedor__c/recordTypes/Representacao_Comercial.recordType-meta.xml
<RecordType>
    <fullName>Representacao_Comercial</fullName>
    <active>true</active>
    <label>Representação Comercial</label>
</RecordType>