force-app/main/default/objects/Fornecedor__c/validationRules/Prazo_de_recebimento.validationRule-meta.xml
<ValidationRule>
    <fullName>Prazo_de_recebimento</fullName>
    <active>false</active>
    <description>Impede a alteração do prazo de recebimento</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),  /* Garante que não seja um novo registro */
    ISCHANGED(Prazo_de_recebimento__c) /* Verifica se o campo foi alterado */
)</errorConditionFormula>
    <errorMessage>Para definir um novo prazo de recebimento utilize o campo Nova Data de Entrega</errorMessage>
</ValidationRule>