force-app/main/default/objects/Fornecedor__c/validationRules/Se_Pedido_de_Compra_Internacional_Obriga.validationRule-meta.xml
<ValidationRule>
    <fullName>Se_Pedido_de_Compra_Internacional_Obriga</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ispickval(Pedido_de_compra__r.Origem__c, &quot;Internacional&quot;), 
 N_do_Ped_de_Compra_do_Fornecedor__c = NULL
)</errorConditionFormula>
    <errorDisplayField>N_do_Ped_de_Compra_do_Fornecedor__c</errorDisplayField>
    <errorMessage>Preencha o N° do Pedido de Compra do Fornecedor.</errorMessage>
</ValidationRule>