force-app/main/default/objects/Fornecedor__c/listViews/Pedidos_de_Compra.listView-meta.xml
<ListView>
    <fullName>Pedidos_de_Compra</fullName>
    <columns>NAME</columns>
    <columns>Fornecedor__c</columns>
    <columns>Valor_total_comprado__c</columns>
    <columns>Prazo_de_recebimento__c</columns>
    <columns>Data_da_Compra__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Pedidos de Compra</label>
</ListView>