force-app/main/default/objects/Fornecedor__c/listViews/Pedidos_de_compra_consumo_finalizados.listView-meta.xml
<ListView>
    <fullName>Pedidos_de_compra_consumo_finalizados</fullName>
    <columns>NAME</columns>
    <columns>Fornecedor__c</columns>
    <columns>Valor_total_comprado__c</columns>
    <columns>Prazo_de_recebimento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Valor_total_comprado__c</field>
        <operation>greaterThan</operation>
        <value>BRL 0</value>
    </filters>
    <filters>
        <field>Status_do_PC__c</field>
        <operation>equals</operation>
        <value>Finalizado parcial,Finalizado total</value>
    </filters>
    <filters>
        <field>Tipo__c</field>
        <operation>contains</operation>
        <value>consumo</value>
    </filters>
    <label>Pedidos de compra consumo finalizados</label>
</ListView>