force-app/main/default/objects/Fornecedor__c/listViews/X01_Rascunho.listView-meta.xml
<ListView>
    <fullName>X01_Rascunho</fullName>
    <columns>NAME</columns>
    <columns>Fornecedor__c</columns>
    <columns>Valor_total_comprado__c</columns>
    <columns>Prazo_de_recebimento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Valor_total_comprado__c</field>
        <operation>greaterThan</operation>
        <value>BRL 0</value>
    </filters>
    <filters>
        <field>Status_do_PC__c</field>
        <operation>equals</operation>
        <value>Rascunho</value>
    </filters>
    <label>01 - Rascunho</label>
</ListView>