force-app/main/default/objects/Fornecedor__c/listViews/X03_Finalizado_parcial.listView-meta.xml
<ListView>
    <fullName>X03_Finalizado_parcial</fullName>
    <columns>NAME</columns>
    <columns>Fornecedor__c</columns>
    <columns>Valor_total_comprado__c</columns>
    <columns>Prazo_de_recebimento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Valor_total_comprado__c</field>
        <operation>greaterThan</operation>
        <value>BRL 0</value>
    </filters>
    <filters>
        <field>Status_do_PC__c</field>
        <operation>equals</operation>
        <value>Finalizado parcial</value>
    </filters>
    <label>04 - Finalizado parcial</label>
</ListView>