force-app/main/default/objects/Fornecedor__c/listViews/X05_Finalizado_total.listView-meta.xml
<ListView>
    <fullName>X05_Finalizado_total</fullName>
    <columns>NAME</columns>
    <columns>Fornecedor__c</columns>
    <columns>Valor_total_comprado__c</columns>
    <columns>Prazo_de_recebimento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Valor_total_comprado__c</field>
        <operation>greaterThan</operation>
        <value>BRL 0</value>
    </filters>
    <filters>
        <field>Status_do_PC__c</field>
        <operation>equals</operation>
        <value>Finalizado total</value>
    </filters>
    <label>05 - Finalizado total</label>
</ListView>